Fixed overflow

--- a/activities/XOEditor.activity/css/activity.css
+++ b/activities/XOEditor.activity/css/activity.css
@@ -29,6 +29,8 @@
 }
 
 #canvas {
+  display: flex;
+  justify-content: center;
   overflow-x: hidden;
   overflow-y: hidden;
 }
